<RelativeLayout android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".FragmentBoiTinhYeuDes2">

    <ScrollView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_lovetest2"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        style="@style/home_image"
                        android:adjustViewBounds="true"
                        android:src="@drawable/icon_boitinhyeu"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/result_bty1"
                        style="@style/home_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/fragboitinhyeu_0"
                        android:textColor="@color/purple_700"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/result_bty2"
                        style="@style/home_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text=""
                        android:textColor="@color/purple_700"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        style="@style/home_image"
                        android:src="@drawable/batquai1"
                        tools:ignore="ContentDescription" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        tools:ignore="NestedWeights,UseCompoundDrawables">


                        <TextView
                            android:id="@+id/result_bty_pd"
                            style="@style/home_text_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:text="@string/fragboitinhyeu_phuongdong"
                            android:textColor="@color/purple_700"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/bt_pd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/rounded_edittext"
                            android:text="@string/fragboitinhyeu_xemketqua"
                            android:textSize="20sp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    style="@style/home_image"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_boiphuongtay"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/result_bty_chd"
                        style="@style/home_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:text="@string/fragboitinhyeu_phuongtay"
                        android:textColor="@color/purple_700"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/bt_chd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/rounded_edittext"
                        android:text="@string/fragboitinhyeu_xemketqua"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>